--- a/src/App.css
+++ b/src/App.css
@@ -73,13 +73,18 @@ line-height: 0%; /* 38.4px */
   justify-content: space-between;
   top: 30px;
 }
+.skip_container{
+  position: absolute;
+  margin-left: -27px;
+}
 .the_skip_box{
+
   opacity: 1 !important;
   z-index: 9999;
   width: 60%;
   position: absolute;
-  top: 40%;
-  left: 20%;
+  top: 30%;
+  left: 18%;
 padding: 32px 18px;
 display: flex;
 flex-direction: column;
@@ -123,6 +128,7 @@ line-height: 100%;
   justify-content: center;
   align-items: center;
   margin:0px;
+  margin-top: 15px;
 }
 .skip_heading{
   color: var(--Light-Light--100, #FFF);
