--- a/src/App.css
+++ b/src/App.css
@@ -221,8 +221,10 @@ font-family: Gilroy;
 font-size: 26px;
 font-style: normal;
 font-weight: 700;
-line-height: 100%; /* 26px */
-margin-bottom: 20px;
+line-height: 100%; 
+}
+.margin_it{
+  margin-bottom: 20px;
 }
 .Win_status{
   color: var(--Light-Light--100, #FFF);
